<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/af2f2f2"
    android:orientation="vertical">

    <Button
        android:id="@+id/photo_take"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/photograph"
        android:textSize="13sp" />

    <Button
        android:id="@+id/photo_album"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/my_photo_albums"
        android:textSize="13sp" />

    <Button
        android:id="@+id/photo_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="13sp" />
</LinearLayout>