<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl_banner"
            android:background="@mipmap/timgs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:padding="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/temp"
                    android:text="当前温度:"
                    android:textSize="@dimen/dp_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/sk_temp"
                    android:layout_toRightOf="@+id/temp"
                    android:text="19c"
                    android:textSize="@dimen/dp_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:padding="@dimen/dp_5"
                    android:id="@+id/today_week"
                    android:text="星期一"
                    android:textSize="@dimen/dp_15"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/today_city"
                    android:text="北京"
                    android:textSize="@dimen/dp_35"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/today_weather"
                    android:text="雷阵雨"
                    android:textSize="@dimen/dp_15"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:padding="@dimen/dp_5"
                    android:id="@+id/today_data"
                    android:text="2019年04月15日"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/dp_100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/exercise_index"
                    android:padding="@dimen/dp_5"
                    android:text="晨练指数："
                    android:layout_marginTop="@dimen/dp_90"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/today_exercise"
                    android:text="不适宜"
                    android:layout_marginTop="@dimen/dp_95"
                    android:layout_toRightOf="@+id/exercise_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_132"
                android:adjustViewBounds="true"
                app:image_scale_type="fit_xy" />

            <cn.jzvd.JZVideoPlayerStandard
                android:id="@+id/vvp_main_video1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_65"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/new_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_27"
                    android:layout_height="@dimen/dp_27"
                    android:src="@mipmap/new_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/new_products"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/selling_goods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_27"
                    android:layout_height="@dimen/dp_27"
                    android:src="@mipmap/hotsale_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/selling_goods"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/dp_27"
                    android:layout_height="@dimen/dp_27"
                    android:src="@mipmap/guide" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="指南"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/jimei_headlines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_27"
                    android:layout_height="@dimen/dp_27"
                    android:src="@mipmap/headline_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/jimei_headlines"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_6"
            android:background="@color/line" />
    </LinearLayout>
</RelativeLayout>